--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         <img src="img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Bassey Inyang</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://x.com/baxx08?s=21&t=r06yCa0kTmTCH64I1_-O3g" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="https://github.com/Bax08" class="github"><i class="bx bxl-github"></i></a>
+          <a href="https://twitter.com/BaxX08" class="twitter"><i class="bx bxl-twitter"></i></a>
+          <a href="https://github.com/Bax-dev" class="github"><i class="bx bxl-github"></i></a>
           <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="https://www.instagram.com/bax.dev?igsh=MTFqODdmM3J3MDJhdg%3D%3D&utm_source=qr" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="https://www.linkedin.com/in/bassey-inyang-1835a0235?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" class="linkedin"><i class="bx bxl-linkedin"></i></a>
@@ -202,9 +202,9 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Photoshop <i class="val">55%</i></span>
+              <span class="skill">Django <i class="val">95%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -213,9 +213,8 @@
         </div>
 
       </div>
-    </section><!-- End Skills Section -->
+    </section>
 
-    <!-- ======= Resume Section ======= -->
     <section id="resume" class="resume">
       <div class="container">
 
@@ -314,27 +313,27 @@
               <img src="img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://github.com/Bax-dev" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+              <img src="img/portfolio/portfolio-2.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="img/portfolio/portfolio-2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="https://github.com/Bax-dev" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+              <img src="img/portfolio/portfolio-3.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="img/portfolio/portfolio-3.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
+                <a href="https://github.com/Bax-dev" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -342,9 +341,8 @@
         </div>
 
       </div>
-    </section><!-- End Portfolio Section -->
+    </section>
 
-    <!-- ======= Services Section ======= -->
     <section id="services" class="services">
       <div class="container">
 
@@ -403,11 +401,11 @@
               <div class="testimonial-item" data-aos="fade-up">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Hardworking and time Management is vital in development and Bassey is good with
+                  Hardworking and time Management is vital in development and Bassey is good with those attributes
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <h3>Mr Betrand Urgoji</h3>
-                <h4>Ceo &amp; Founder</h4>
+                <h4>Ceo &amp; Founder Uptitek</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -417,7 +415,7 @@
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="200">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                 One of the best developers I have worked with.
+                 The best python developer I have worked and works under different situations
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <h3>Ifeanyi Nneji</h3>
@@ -429,12 +427,12 @@
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="300">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Smart Developer and Engineer
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                  Hardworking Engineer and explores different options in solving a problem
+                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
 
-                <h3>Professor Salami</h3>
-                <h4>Mechatronics Engineer</h4>
+                <h3>Salami Momoh</h3>
+                <h4>Professor of Mechatronics Engineer</h4>
               </div>
             </div>
             <!-- End testimonial item -->
@@ -486,33 +484,33 @@
 
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-              <div class="row">
-                <div class="form-group col-md-6">
-                  <label for="name">Your Name</label>
-                  <input type="text" name="name" class="form-control" id="name" required>
+                <div class="row">
+                    <div class="form-group col-md-6">
+                        <label for="name">Your Name</label>
+                        <input type="text" name="name" class="form-control" id="name" required>
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="email">Your Email</label>
+                        <input type="email" class="form-control" name="email" id="email" required>
+                    </div>
                 </div>
-                <div class="form-group col-md-6">
-                  <label for="name">Your Email</label>
-                  <input type="email" class="form-control" name="email" id="email" required>
+                <div class="form-group">
+                    <label for="subject">Subject</label>
+                    <input type="text" class="form-control" name="subject" id="subject" required>
                 </div>
-              </div>
-              <div class="form-group">
-                <label for="name">Subject</label>
-                <input type="text" class="form-control" name="subject" id="subject" required>
-              </div>
-              <div class="form-group">
-                <label for="name">Message</label>
-                <textarea class="form-control" name="message" rows="10" required></textarea>
-              </div>
-              <div class="my-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
+                <div class="form-group">
+                    <label for="message">Message</label>
+                    <textarea class="form-control" name="message" rows="10" required></textarea>
+                </div>
+                <div class="my-3">
+                    <div class="loading">Loading</div>
+                    <div class="error-message"></div>
+                    <div class="sent-message">Your message has been sent. Thank you!</div>
+                </div>
+                <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
-          </div>
-
+        </div>
+        
         </div>
 
       </div>
@@ -527,11 +525,7 @@
         &copy; Copyright <strong><span>Bax.dev</span></strong>
       </div>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">Bax.dev</a>
+        Designed by <a href="https://twitter.com/BaxX08">Bax.dev</a>
       </div>
     </div>
   </footer><!-- End  Footer -->
