--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="picture.png" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Bassey Inyang</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://twitter.com/BaxX08" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -85,7 +85,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="img/profile-img.jpg" class="img-fluid" alt="">
+            <img src="picture.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Web Developer &amp; Mechatronics Engineer.</h3>
@@ -103,8 +103,8 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>21</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>B.Eng</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span id="age"></span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>B.Eng Mechatronics</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>bassyeyo991@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>On site:</strong> <span>Available</span></li>
                 </ul>
@@ -310,30 +310,30 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <img src="img/web1.PNG" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                <a href="https://github.com/Bax-dev" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="img/web1.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="https://webinar.uptitek.com/ng.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="img/portfolio/portfolio-2.png" class="img-fluid" alt="">
+              <img src="img/web2.PNG" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="img/portfolio/portfolio-2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="https://github.com/Bax-dev" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="img/web2.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="https://www.satisfyretreats.com/" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="img/portfolio/portfolio-3.png" class="img-fluid" alt="">
+              <img src="img/web3.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="img/portfolio/portfolio-3.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                <a href="https://github.com/Bax-dev" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="img/web3.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
+                <a href="https://github.com/Bax-dev/Food-Price-Analysis-in-Nigeria-2024-" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -348,7 +348,7 @@
 
         <div class="section-title">
           <h2>Services</h2>
-          <p> As a full-stack developer, I offer end-to-end web development services, designing user interfaces, implementing server-side logic, managing databases, deploying applications, and ensuring seamless communication between different components.</p>
+          <p class="mb-2 pb-2"> As a full-stack developer, I offer end-to-end web development services, designing user interfaces, implementing server-side logic, managing databases, deploying applications, and ensuring seamless communication between different components.</p>
 
         <div class="row">
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
@@ -462,7 +462,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>Port Harcourt,Rivers State, Nigeria</p>
+                <p>Port Harcourt, Rivers State, Nigeria</p>
               </div>
 
               <div class="email">
@@ -482,8 +482,8 @@
 
           </div>
 
-          <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+          <!-- <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
+            <form action="" method="post" role="form" class="php-email-form">
                 <div class="row">
                     <div class="form-group col-md-6">
                         <label for="name">Your Name</label>
@@ -509,7 +509,7 @@
                 </div>
                 <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
-        </div>
+        </div> -->
         
         </div>
 
